link no whatsApp

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="call-cs">
         <ul id="ul-call-cs">
             <li><a href="#">Konsultasi Apoteker</a></li>
-            <li><a href="#">Order via WhatsApp</a></li>
+            <li><a href="whatsapp://send?text=Hello&phone=+6282255670080">Order via WhatsApp</a></li>
             <li><a href="#">Order via OLShopApp</a></li>
         </ul>
         <button id="btn-call-cs"><i class="bi bi-question-octagon" style="font-size: 2rem; color: #6610f2;"></i></button>
