--- a/index.html
+++ b/index.html
@@ -13,34 +13,35 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     </head>
-    <body>
-
-        <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container px-5">
-        <a class="navbar-brand" href="#!">Alifa Farma Grup</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Beranda</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">Layanan Kami</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">Kontak Kami</a></li>
-            </ul>
+<body>
+    <!-- Responsive navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container px-5">
+            <a class="navbar-brand" href="#!">Alifa Farma Grup</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#!">Layanan Kami</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#!">Kontak Kami</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
-        <!-- Page Content-->
+<!-- Page Content-->
 <div class="container px-4 px-lg-5">
+
     <!-- Heading Row-->
     <div id="call-cs">
         <ul id="ul-call-cs">
-            <li><a href="#">Konsultasi Apoteker</a></li>
+            <li><a href="whatsapp://send?text=Hello&phone=+6282255670080">Konsultasi Dokter</a></li>
+            <li><a href="whatsapp://send?text=Hello&phone=+6282255670080">Konsultasi Apoteker</a></li>
             <li><a href="whatsapp://send?text=Hello&phone=+6282255670080">Order via WhatsApp</a></li>
-            <li><a href="#">Order via OLShopApp</a></li>
         </ul>
         <button id="btn-call-cs"><i class="bi bi-question-octagon" style="font-size: 2rem; color: #6610f2;"></i></button>
     </div>
+    <!-- JS button ? -->
     <script>
         let tombol = $('#btn-call-cs');
         let menu = $('#ul-call-cs');
@@ -49,44 +50,45 @@
             menu.toggle();
         });
     </script>
-    <!-- Bagian akhir button tanda tanya -->
+    <!-- end JS button ? -->
 
+    <!-- start page Content-row-1 -->
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
         <div class="col-lg-5">
-            <h1 class="font-weight-light">Tagline dari sebuah apotik</h1>
-            <p>Penjelasan dari sejarah, visi dan misi, serta produk dan layanan apa saja pada apotik</p>
+            <h1 class="font-weight-light">Tagline dari sebuah apotek</h1>
+            <p>Penjelasan dari sejarah, visi dan misi, serta produk dan layanan apa saja pada apotek</p>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Info lebih lengkap
             </button>
         </div>
     </div>
-
     <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Tagline dari Apotik Alifa Farma Grup</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Tagline dari apotek Alifa Farma Grup</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            isi,, sejarah dari apotik, penjelasan tentang visi dan misi. kemudian langkah apa selanjutnya dari owner untuk kemajuan apotik.
+            isi,, sejarah dari apotek, penjelasan tentang visi dan misi. kemudian langkah apa selanjutnya dari owner untuk kemajuan apotek.
         </div>
         <div class="modal-footer">
             <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
         </div>
         </div>
     </div>
-</div>
-<!-- bagian dari content-row-1 -->
-    <!-- Bagian akhir Content baris 1-->
+    </div>
+    <!-- end page Content baris 1-->
 
+    <!-- start page Content baris 2 -->
     <div class="card text-white bg-secondary my-5 py-4 text-center">
         <div class="card-body"><p class="text-white m-0">Bisa di isi dengan keterangan dari produk atau dengan yang lain.</p></div>
     </div>
-    <!-- Content baris 2-->
+    <!-- end page Content baris 2-->
 
+    <!-- start page Content baris 3 -->
     <div class="row gx-4 gx-lg-5">     
         <div class="col-md-4 mb-5">
             <div class="card h-100">
@@ -206,7 +208,85 @@
             </div>
         </div>
     </div>
+    <!-- end page Content baris 3 -->
+
+    <!-- start page google maps -->
+    <!-- API Google Maps -->
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
+
+    <!-- page cabang Banjarbaru -->
+    <div class="row gx-4 gx-lg-5 align-items-center my-5">
+        <div class="col-lg-5">
+            <h1 class="font-weight-light">Tagline Apotek Alifa Farma Banjarbaru</h1>
+            <p>Alamat dari apotek di Banjarbaru .....</p>
+            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Info lebih lengkap
+            </button> -->
+        </div>
+        <div id="mapAlifaBjb" class="col-lg-7" style="border-radius: 5%; border: 2px solid black; height: 400px;"><img class="img-fluid rounded mb-4 mb-lg-0">
+        </div>
     </div>
+
+    <script>
+        function mapAlifaBjb() {
+            const koordinatAlifaBjb = new google.maps.LatLng(-3.458733,114.848275)
+
+            var propertiPeta = {
+            center: koordinatAlifaBjb,
+            zoom:20,
+            mapTypeId:google.maps.MapTypeId.ROADMAP
+            };
+        
+            var peta = new google.maps.Map(document.getElementById("mapAlifaBjb"), propertiPeta);
+
+            // membuat Marker
+            var marker=new google.maps.Marker({
+                position: koordinatAlifaBjb,
+                map: peta
+            });
+        }
+
+        // event jendela di-load  
+        google.maps.event.addDomListener(window, 'load', mapAlifaBjb());
+    </script>
+
+    <!-- page cabang Martapura -->
+    <div class="row gx-4 gx-lg-5 align-items-center my-5">
+        <div id="mapAlifaMartapura" class="col-lg-7" style="border-radius: 5%; border: 2px solid black; height: 400px;"><img class="img-fluid rounded mb-4 mb-lg-0">
+        </div>
+        <div class="col-lg-5">
+            <h1 class="font-weight-light">Tagline Apotek Alifa Farma Martapura</h1>
+            <p>Alamat dari apotek di Martapura .....</p>
+            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Info lebih lengkap
+            </button> -->
+        </div>
+    </div>
+
+    <script>
+        function mapAlifaMartapura() {
+            const koordinatAlifaMtp = new google.maps.LatLng(-3.423050,114.849769)
+
+            var propertiPeta = {
+            center: koordinatAlifaMtp,
+            zoom:20,
+            mapTypeId:google.maps.MapTypeId.ROADMAP
+            };
+        
+            var peta = new google.maps.Map(document.getElementById("mapAlifaMartapura"), propertiPeta);
+
+            // membuat Marker
+            var marker=new google.maps.Marker({
+                position: koordinatAlifaBjb,
+                map: peta
+            });
+        }
+
+        // event jendela di-load  
+        google.maps.event.addDomListener(window, 'load', mapAlifaMartapura());
+    </script>
+    <!-- end page Google Maps -->
+</div>
 
     <!-- Footer-->
 <footer class="py-5 bg-dark">
