versi 01,  save script

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -238,8 +239,6 @@
             </button> -->
         </div>
     </div>
-    <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=`AIzaSyBjeNAV-4FNLg5jmwAtvflzb74lfb2LuAM`&callback=gabunganMaps">
-    </script>
     <!-- end page Google Maps -->
 </div>
 
