versi 03,  save script

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+        <meta http-equiv="Permissions-Policy: geolocation=(), interest-cohort=()">
         <title>Alifa Farma</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="public/img/favicon.ico" />
