--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <meta http-equiv="Permissions-Policy: geolocation=(), interest-cohort=()">
         <title>Alifa Farma</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="public/img/favicon.ico" />
@@ -13,7 +12,6 @@
         <link href="public/css/style.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-        <script src="/public/js/script.js"></script>
     </head>
 <body>
     <!-- Responsive navbar-->
@@ -239,6 +237,49 @@
             </button> -->
         </div>
     </div>
+    <script>
+        function mapAlifaMartapura() {
+            const koordinatAlifaMtp = new google.maps.LatLng(-3.423050,114.849769)
+
+            var propertiPeta = {
+            center: koordinatAlifaMtp,
+            zoom:20,
+            mapTypeId:google.maps.MapTypeId.ROADMAP
+            };
+
+            var peta = new google.maps.Map(document.getElementById("mapAlifaMartapura"), propertiPeta);
+
+            // membuat Marker
+            var marker=new google.maps.Marker({
+                position: koordinatAlifaMtp,
+                map: peta
+            });
+        }
+
+        function mapAlifaBjb() {
+            const koordinatAlifaBjb = new google.maps.LatLng(-3.458733,114.848275)
+
+            var propertiPeta = {
+            center: koordinatAlifaBjb,
+            zoom:20,
+            mapTypeId:google.maps.MapTypeId.ROADMAP
+            };
+
+            var peta = new google.maps.Map(document.getElementById("mapAlifaBjb"), propertiPeta);
+
+            // membuat Marker
+            var marker=new google.maps.Marker({
+                position: koordinatAlifaBjb,
+                map: peta
+            });
+        }
+
+        function gabunganMaps() {
+            return mapAlifaBjb(), mapAlifaMartapura();
+        }
+
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjeNAV-4FNLg5jmwAtvflzb74lfb2LuAM&callback=gabunganMaps"></script>
     <!-- end page Google Maps -->
 </div>
 
